- Most pages working nicely now, moving onto implementing the news page

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,4 +1,4 @@
 <app-navbar></app-navbar>
 <div style="height: 12vh"></div>
-<router-outlet></router-outlet>
+<router-outlet data-aos="fade-in"></router-outlet>
 <app-footer></app-footer>
