--- a/src/app/nav/navbar/navbar.component.html
+++ b/src/app/nav/navbar/navbar.component.html
@@ -1,4 +1,4 @@
-<div class="container">
+<div class="container" data-aos="fade-in" data-aos-delay="200">
   <div class="container__left">
     <div class="container__left__logo-wrapper">
       <a href="/">
@@ -15,7 +15,7 @@
   <div class="container__right">
       <a routerLink="/artists" class="container__right__link">Artists</a>
       <a routerLink="/releases" class="container__right__link">Releases</a>
-      <a routerLink="/contact" class="container__right__link">Calendar</a>
-      <a routerLink="/calendar" class="container__right__link">Contact</a>
+      <a routerLink="/calendar" class="container__right__link">Calendar</a>
+      <a routerLink="/contact" class="container__right__link">Contact</a>
   </div>
 </div>
