--- a/src/app/pages/artists/artists.component.html
+++ b/src/app/pages/artists/artists.component.html
@@ -1,8 +1,8 @@
-<div class="container content-padded">
+<div class="container content-padded" data-aos="fade-in" data-aos-delay="250">
   <h2 class="container__title">
     ARTISTS
   </h2>
-  <div class="container__artists" data-aos="fade-down">
+  <div class="container__artists" data-aos="fade-in">
     <app-artist-tile *ngFor="let artist of artists" [artist]="artist" ></app-artist-tile>
   </div>
 </div>
