--- a/src/app/pages/home/components/news/tile/tile.component.html
+++ b/src/app/pages/home/components/news/tile/tile.component.html
@@ -4,7 +4,7 @@
     <img src="{{data.imgSrc}}" alt="{{data.imgDesc}}">
   </div>
   <div class="container__tile__text">
-    <h4 class="container__tile__text__head">{{data.heading}}</h4>
+    <h4 class="container__tile__text__head allPage-subtitle">{{data.heading}}</h4>
     <p class="container__tile__text__desc">{{data.text}}</p>
     <p class="container__tile__text__read-more">Read more >></p>
   </div>
