--- a/src/app/pages/home/components/news/tile/tile.component.scss
+++ b/src/app/pages/home/components/news/tile/tile.component.scss
@@ -19,6 +19,7 @@
     }
     &__desc {
       width: 75%;
+      font-size: 1.2em;
       overflow: hidden;
       display: -webkit-box;
       -webkit-line-clamp: 2;
