--- a/src/app/pages/home/home.component.html
+++ b/src/app/pages/home/home.component.html
@@ -1,11 +1,22 @@
 <app-carousel></app-carousel>
-<div class="news-twitter">
-  <div class="news-twitter__news">
-    <app-news></app-news>
+<!--<div class="news-twitter">-->
+<!--  <div class="news-twitter__news">-->
+<!--  </div>-->
+<!--  <div class="about-twitter__twitter-wrapper">-->
+<!--    <app-twitter></app-twitter>-->
+<!--  </div>-->
+<!--</div>-->
+<!--<app-insta-feed></app-insta-feed>-->
+<div class="container">
+  <div class="container__info-news">
+    <div class="content-padded info-wrapper" data-aos="fade-up" data-aos-delay="200">
+      <app-about-us></app-about-us>
+    </div>
+    <div class="news-wrapper" data-aos="fade-up" data-aos-delay="200">
+      <app-news></app-news>
+    </div>
   </div>
-  <div class="about-twitter__twitter-wrapper">
-    <app-twitter></app-twitter>
+  <div class="container__feed">
+    <div class="fb-page" data-href="https://www.facebook.com/handsoftheheron/" data-tabs="timeline" data-width="" data-height="" data-small-header="false" data-adapt-container-width="true" data-hide-cover="false" data-show-facepile="true"><blockquote cite="https://www.facebook.com/handsoftheheron/" class="fb-xfbml-parse-ignore"><a href="https://www.facebook.com/handsoftheheron/">Hands of the Heron</a></blockquote></div>
   </div>
 </div>
-<app-about-us></app-about-us>
-<app-insta-feed></app-insta-feed>
