--- a/src/app/pages/releases/release-page/release-page.component.html
+++ b/src/app/pages/releases/release-page/release-page.component.html
@@ -4,10 +4,10 @@
       <img src="{{release.imgSrc}}">
     </div>
     <div class="container__release-info">
-      <h2 class="page-title">{{release.title}}</h2>
-      <h3>{{release.artist}}, {{release.year}}</h3>
-      <p>{{release.info}}</p>
-      <div class="container__release-info__purchase">
+      <h2 class="page-title allPage-title">{{release.title}}</h2>
+      <h2>{{release.artist}}, {{release.year}}</h2>
+      <p class="allPage-para">{{release.info}}</p>
+      <div class="container__release-info__purchase" >
         <h3>Buy now: {{release.price}}</h3>
       </div>
       <div class="container__release-info__links">
