--- a/src/app/pages/releases/release-tile/release-tile.component.scss
+++ b/src/app/pages/releases/release-tile/release-tile.component.scss
@@ -1,8 +1,7 @@
 @import "src/styles";
 
 :host {
-  flex: 0 0 30%;
-  margin-right: 3%;
+  flex: 0 0 33%;
 }
 
 .container {
@@ -27,5 +26,7 @@
     margin-top: 0.5em;
     margin-bottom: 1em;
     text-decoration: none;
+  }
+  h4 {
   }
 }
