--- a/src/app/pages/releases/releases.component.html
+++ b/src/app/pages/releases/releases.component.html
@@ -1,4 +1,4 @@
-<div class="container content-padded">
+<div class="container content-padded" data-aos="fade-in" data-aos-delay="250">
   <h2 class="container__title">
     Releases
   </h2>
