--- a/src/styles.scss
+++ b/src/styles.scss
@@ -47,3 +47,16 @@ body {
   background: $tertiaryFontColor !important;
 }
 
+.allPage-title {
+  font-size: 3em;
+}
+
+.allPage-subtitle {
+  font-size: 2em;
+}
+
+p {
+  font-family: 'Abel', sans-serif;
+  letter-spacing: 0.02em;
+}
+
