--- a/src/app/pages/artists/artist-tile/artist-tile.component.scss
+++ b/src/app/pages/artists/artist-tile/artist-tile.component.scss
@@ -1,8 +1,7 @@
 @import "src/styles";
 
 :host {
-  flex: 0 0 30%;
-  margin-right: 3%;
+  flex: 0 0 33%;
 }
 
 .container {
@@ -27,5 +26,6 @@
     margin-top: 0.5em;
     margin-bottom: 1em;
     text-decoration: none;
+    text-align: center;
   }
 }
