--- a/src/app/pages/releases/release-page/release-page.component.scss
+++ b/src/app/pages/releases/release-page/release-page.component.scss
@@ -5,19 +5,24 @@
     display: flex;
     padding-top: 3em;
     padding-bottom: 0;
+    margin-bottom: 4em;
   }
   .page-title {
-    font-size: 3em;
     margin-top: 0;
+    margin-bottom: 0;
   }
   &__img-wrapper {
-    flex: 0 0 50%;
+    flex: 0 0 30%;
     img {
-      width: 100%;
+      max-height: 40em;
+      max-width: 50em;
+      width: auto;
+      object-fit: cover;
     }
   }
   &__release-info {
     padding-left: 3em;
+    flex: 0 0 70%;
     p {
       font-size: 1.5em;
     }
@@ -41,6 +46,9 @@
           }
         }
       }
+    }
+    &__purchase {
+      display: none;
     }
   }
   &__lower {
