- Site is functionally nearly there, just need to do the contact page now

--- a/src/app/pages/artists/artist-tile/artist-tile.component.html
+++ b/src/app/pages/artists/artist-tile/artist-tile.component.html
@@ -1,5 +1,5 @@
   <div class="container">
-    <a href="/artist/{{artist.route}}" class="container-wrapper">
+    <a routerLink="/artist/{{artist.route}}" class="container-wrapper">
     <div class="container__img-wrapper">
       <img src="{{artist.imgSrc}}">
     </div>
