--- a/src/app/pages/releases/release-tile/release-tile.component.html
+++ b/src/app/pages/releases/release-tile/release-tile.component.html
@@ -1,5 +1,5 @@
 <div class="container">
-  <a href="/release/{{release.route}}" class="container-wrapper">
+  <a routerLink="/release/{{release.route}}" class="container-wrapper">
     <div class="container__img-wrapper">
       <img src="{{release.imgSrc}}">
     </div>
