--- a/src/styles.scss
+++ b/src/styles.scss
@@ -1,6 +1,6 @@
 /* You can add global styles to this file, and also import other style files */
 $mainFontColor: #000000;
-$secondaryFontColor: #0b1463;
+$secondaryFontColor: #d7eede;
 $tertiaryFontColor: #dabeea;
 $offWhite: #f1f1f1;
 $hoverColor: red;
