--- a/src/app/nav/navbar/navbar.component.html
+++ b/src/app/nav/navbar/navbar.component.html
@@ -1,21 +1,22 @@
-<div class="container" data-aos="fade-in" data-aos-delay="200">
-  <div class="container__left">
+<div class="container" data-aos="fade-in" data-aos-delay="150">
+  <div class="container__left" data-aos="fade-right" data-aos-delay="280">
     <div class="container__left__logo-wrapper">
-      <a href="/">
-        <img class="container__left__logo-wrapper__logo" src="assets/images/logo.png">
+      <a routerLink="/">
+        <img class="container__left__logo-wrapper__logo" src="assets/icons/cuculilogo.png">
       </a>
     </div>
   </div>
-  <div class="container__centerpiece">
+  <div class="container__centerpiece" data-aos="zoom-in" data-aos-delay="320">
     <a routerLink="/" class="container__centerpiece__text-wrapper">
       <h2 class="container__centerpiece__text">CUCULI</h2>
       <h3 class="container__centerpiece__subtext">RECORDS</h3>
     </a>
   </div>
-  <div class="container__right">
+  <div class="container__right" data-aos="fade-left" data-aos-delay="280">
       <a routerLink="/artists" class="container__right__link">Artists</a>
       <a routerLink="/releases" class="container__right__link">Releases</a>
       <a routerLink="/calendar" class="container__right__link">Calendar</a>
+      <a routerLink="/news" class="container__right__link">News</a>
       <a routerLink="/contact" class="container__right__link">Contact</a>
   </div>
 </div>
