--- a/src/app/nav/navbar/navbar.component.scss
+++ b/src/app/nav/navbar/navbar.component.scss
@@ -3,11 +3,12 @@
 :host {
   position: fixed;
   z-index: 10;
-  background: #d9e8e3;
+  background: #3e5866;
+  //background: #d9e8e3;
 }
 
 .container {
-  height: 12vh;
+  height: 15vh;
   display: flex;
   width: 100vw;
   &__left {
@@ -15,12 +16,11 @@
     display: flex;
     &__logo-wrapper {
       flex: 0 0 30%;
-      border: 1px solid blue;
       display: flex;
       justify-content: center;
       margin-left: 3em;
       &__logo {
-        width: 10vh
+        height: 15vh;
       }
     }
   }
@@ -31,7 +31,7 @@
     justify-content: center;
     font-size: 2em;
     &__text-wrapper {
-      color: black;
+      color: #FFFFFF;
       text-decoration: none;
       display: flex;
       flex-direction: column;
@@ -57,7 +57,7 @@
       text-decoration: none;
     }
     &__link:hover {
-      color: $mainFontColor;
+      color: $tertiaryFontColor;
       font-style: italic;
     }
   }
