--- a/src/app/pages/home/components/news/tile/tile.component.html
+++ b/src/app/pages/home/components/news/tile/tile.component.html
@@ -1,7 +1,7 @@
-<a href="{{data.route}}" class="container__tile">
-  <h3 class="container__tile__featured" *ngIf="data.isFeatured">Featured Story</h3>
+<a routerLink="{{data.route}}" class="container__tile">
+  <h2 class="container__tile__featured" [ngClass]="inPage ? 'displayNone' : ''" *ngIf="data.isFeatured">Featured Story</h2>
   <div class="container__tile__img-wrapper">
-    <img src="{{data.imgSrc}}" alt="{{data.imgDesc}}">
+    <img src="{{data.imgSrc}}" alt="{{data.imgDesc}}" [ngClass]="data.isFeatured === true ? 'featuredImg' : ''">
   </div>
   <div class="container__tile__text">
     <h4 class="container__tile__text__head allPage-subtitle">{{data.heading}}</h4>
