--- a/src/app/pages/artists/artist-tile/artist-tile.component.scss
+++ b/src/app/pages/artists/artist-tile/artist-tile.component.scss
@@ -29,3 +29,16 @@
     text-align: center;
   }
 }
+
+@media only screen and (max-width: 1000px){
+ :host {
+   flex: 0 0 50%;
+ }
+}
+
+@media only screen and (max-width: 750px){
+  :host {
+    flex: 0 0 100%;
+  }
+}
+
