--- a/src/app/pages/calendar/upcoming-event/upcoming-event.component.scss
+++ b/src/app/pages/calendar/upcoming-event/upcoming-event.component.scss
@@ -32,3 +32,27 @@
     }
   }
 }
+
+@media only screen and (max-width: 1100px){
+  :host {
+    flex: 0 0 100%;
+  }
+}
+
+@media only screen and (max-width: 600px){
+  .container {
+    &__upper {
+      flex-direction: column;
+      &__event-img {
+        img {
+          width: 90%;
+        }
+      }
+      &__info {
+        flex: 0 0 100%;
+        padding-left: 0;
+      }
+    }
+  }
+}
+
