--- a/src/app/pages/home/home.component.scss
+++ b/src/app/pages/home/home.component.scss
@@ -34,3 +34,11 @@
     }
   }
 }
+
+@media only screen and (max-width: 1000px){
+  .container {
+    &__info-news {
+      flex-direction: column;
+    }
+  }
+}
