--- a/src/app/pages/releases/release-tile/release-tile.component.scss
+++ b/src/app/pages/releases/release-tile/release-tile.component.scss
@@ -30,3 +30,15 @@
   h4 {
   }
 }
+
+@media only screen and (max-width: 1000px){
+  :host {
+    flex: 0 0 50%;
+  }
+}
+
+@media only screen and (max-width: 750px){
+  :host {
+    flex: 0 0 100%;
+  }
+}
