- Frontend is 98% working fine, just a few small visual bugs to fix

--- a/src/app/footer/footer.component.html
+++ b/src/app/footer/footer.component.html
@@ -1,4 +1,4 @@
-<div class="container">
+<div class="container content-padded">
   <div class="container__links">
     <a routerLink="artists">artists</a>
     <a routerLink="releases">releases</a>
@@ -7,8 +7,16 @@
     <a routerLink="contact">contact</a>
   </div>
   <div class="container__logos">
-    <a href="www.facebook.com">F</a>
-    <a href="www.twitter.com">T</a>
-    <a href="www.instagram.com">I</a>
+    <a href="https://www.facebook.com/handsoftheheron/" target="_blank">
+      <img src="../../assets/icons/facebookwht.svg" class="container__logos__logo">
+    </a>
+    <a href="https://www.instagram.com/handsoftheheron/?hl=en" target="_blank">
+      <img src="../../assets/icons/instagramwht.svg" class="container__logos__logo">
+    </a>
   </div>
+</div>
+<div class="harry-info">
+  <a href="https://hcoulton.tech" target="_blank" style="color: white" id="harry-link">
+    Built by Harry Coulton 2020 - Click for more
+  </a>
 </div>
