--- a/src/app/pages/calendar/calendar.component.html
+++ b/src/app/pages/calendar/calendar.component.html
@@ -1,4 +1,4 @@
-<div class="content-padded container">
+<div class="content-padded container" data-aos="fade-in">
   <h2 class="calendar-info allPage-title">
     Upcoming events
   </h2>
