--- a/src/app/footer/footer.component.scss
+++ b/src/app/footer/footer.component.scss
@@ -1,7 +1,10 @@
+@import "src/styles";
+
 .container {
   height: 30vh;
   background-color: #091223;
   display: flex;
+  justify-content: space-between;
   &__links {
     flex: 0 0 30%;
     display: flex;
@@ -13,6 +16,40 @@
       color: #ffffff;
       text-decoration: none;
       font-size: 2em;
+    }
+    a:hover {
+      color: $tertiaryFontColor;
+    }
+  }
+  &__logos {
+    flex: 0 0 30%;
+    display: flex;
+    justify-content: space-around;
+    align-items: center;
+    a {
+      text-transform: capitalize;
+      color: #ffffff;
+      text-decoration: none;
+      font-size: 2em;
+      img {
+        height: 2em;
+        fill: white;
+      }
+    }
+  }
+}
+
+.harry-info {
+  display: flex;
+  align-items: flex-end;
+  justify-content: center;
+  padding-bottom: 2em;
+  background-color: #091223;
+  width: 100%;
+  #harry-link {
+    text-decoration: none;
+    &:hover {
+      color: #00ff00 !important;
     }
   }
 }
