--- a/src/app/nav/navbar/navbar.component.scss
+++ b/src/app/nav/navbar/navbar.component.scss
@@ -60,6 +60,54 @@
       color: $tertiaryFontColor;
       font-style: italic;
     }
+    &__hamburger {
+      display: none;
+    }
+  }
+}
+
+@media only screen and (max-width: 1200px){
+  .container {
+    &__right {
+      flex: 0 0 40%;
+      display: flex;
+      justify-content: space-around;
+      align-items: center;
+      &__link {
+        font-size: 1.7em;
+      }
+    }
+  }
+}
+
+@media only screen and (max-width: 1200px){
+  .container {
+    &__right {
+      &__link {
+        font-size: 1.7em;
+      }
+    }
+  }
+}
+
+@media only screen and (max-width: 1000px){
+  .container {
+    &__right {
+      &__link {
+        display: none;
+      }
+      &__hamburger {
+        display: flex;
+      }
+    }
+  }
+}
+
+@media only screen and (max-width: 500px){
+  .container {
+    &__centerpiece {
+      display: none;
+    }
   }
 }
 
