--- a/src/app/pages/contact/contact.component.html
+++ b/src/app/pages/contact/contact.component.html
@@ -1,1 +1,12 @@
-<p>contact works!</p>
+<div class="container content-padded" data-aos="fade-in" data-aos-delay="150" style="min-height: 60vh">
+  <h1 class="allPage-title">Contact</h1>
+  <div class="container__contact">
+    <div class="container__contact__details">
+      <h3 class="allPage-subtitle">Phone: +696969420</h3>
+      <h3 class="allPage-subtitle">Email: cuculirecords@gmail.com</h3>
+    </div>
+<!--    <div class="container__contact__form">-->
+<!--&lt;!&ndash;      <img src="assets/icons/cuculilogo.png">&ndash;&gt;-->
+<!--    </div>-->
+  </div>
+</div>
