--- a/src/app/pages/home/components/carousel/carousel.component.html
+++ b/src/app/pages/home/components/carousel/carousel.component.html
@@ -2,7 +2,7 @@
   <owl-carousel-o class="container__carousel" [options]="customOptions">
     <ng-template carouselSlide *ngFor="let slide of slides">
       <div class="container__carousel__slide" style="background-image: url({{slide.imageSrc}})">
-        <a routerLink="{{slide.link}}" class="container__carousel__slide__text">
+        <a routerLink="{{slide.link}}" class="container__carousel__slide__text content-padded">
           <h2><span>{{slide.heading}}</span></h2>
           <h3><span>{{slide.subHeading}}</span></h3>
         </a>
