--- a/src/app/pages/news/news-page/news-page/news-page.component.scss
+++ b/src/app/pages/news/news-page/news-page/news-page.component.scss
@@ -7,6 +7,10 @@
   }
 }
 
+.quote-mb {
+  display: none;
+}
+
 .container {
   display: flex;
   &__text {
@@ -35,6 +39,23 @@
     app-tile {
       flex: 0 0 30%;
       margin-right: 1%;
+    }
+  }
+}
+
+@media only screen and (max-width: 1000px){
+  .quote-desk {
+    display: none;
+  }
+  .quote-mb {
+    display: block;
+    font-size: 2em;
+  }
+
+  .container {
+    flex-direction: column;
+    &__info {
+      padding-left: 0;
     }
   }
 }
