--- a/src/app/footer/footer.component.scss
+++ b/src/app/footer/footer.component.scss
@@ -1,5 +1,13 @@
 @import "src/styles";
 
+.display {
+  display: none;
+}
+
+.display-none {
+  display: none;
+}
+
 .container {
   height: 30vh;
   background-color: #091223;
