--- a/src/app/nav/navbar/navbar.component.scss
+++ b/src/app/nav/navbar/navbar.component.scss
@@ -17,8 +17,7 @@
     &__logo-wrapper {
       flex: 0 0 30%;
       display: flex;
-      justify-content: center;
-      margin-left: 3em;
+      justify-content: flex-start;
       &__logo {
         height: 15vh;
       }
@@ -51,10 +50,12 @@
     display: flex;
     justify-content: space-around;
     align-items: center;
+    margin-right: 2em;
     &__link {
-      font-size: 2em;
+      font-size: 1.5em;
       color: $secondaryFontColor;
       text-decoration: none;
+      letter-spacing: -0.05em;
     }
     &__link:hover {
       color: $tertiaryFontColor;
@@ -66,7 +67,7 @@
   }
 }
 
-@media only screen and (max-width: 1200px){
+@media only screen and (max-width: 1400px){
   .container {
     &__right {
       flex: 0 0 40%;
@@ -74,7 +75,7 @@
       justify-content: space-around;
       align-items: center;
       &__link {
-        font-size: 1.7em;
+        font-size: 1.4em;
       }
     }
   }
@@ -84,13 +85,13 @@
   .container {
     &__right {
       &__link {
-        font-size: 1.7em;
+        font-size: 1.3em;
       }
     }
   }
 }
 
-@media only screen and (max-width: 1000px){
+@media only screen and (max-width: 1150px){
   .container {
     &__right {
       &__link {
@@ -103,7 +104,7 @@
   }
 }
 
-@media only screen and (max-width: 500px){
+@media only screen and (max-width: 750px){
   .container {
     &__centerpiece {
       display: none;
