--- a/src/app/nav/navbar/navbar.component.html
+++ b/src/app/nav/navbar/navbar.component.html
@@ -1,4 +1,4 @@
-<div class="container" data-aos="fade-in" data-aos-delay="150">
+<div class="container content-padded" data-aos="fade-in" data-aos-delay="150">
   <div class="container__left" data-aos="fade-right" data-aos-delay="280">
     <div class="container__left__logo-wrapper">
       <a routerLink="/">
