--- a/src/app/pages/calendar/calendar.component.scss
+++ b/src/app/pages/calendar/calendar.component.scss
@@ -2,3 +2,10 @@
   display: flex;
   flex-wrap: wrap;
 }
+
+@media only screen and (max-width: 1000px){
+  .event-container {
+    flex-direction: column;
+    max-width: 90vw;
+  }
+}
