--- a/src/app/pages/calendar/upcoming-event/upcoming-event.component.scss
+++ b/src/app/pages/calendar/upcoming-event/upcoming-event.component.scss
@@ -4,13 +4,14 @@
 
 .container {
   margin-bottom: 2em;
+  margin-left: 1em;
   &__upper {
     display: flex;
     margin-bottom: 1em;
     &__event-img {
       img {
-        max-height: 15em;
-        max-width: 30em;
+        width: 100%;
+        height: 30em;
         object-fit: cover;
       }
     }
@@ -44,8 +45,9 @@
     &__upper {
       flex-direction: column;
       &__event-img {
+        max-width: 92vw;
         img {
-          width: 90%;
+          width: 100%;
         }
       }
       &__info {
