--- a/src/app/pages/home/components/news/news.component.html
+++ b/src/app/pages/home/components/news/news.component.html
@@ -1,4 +1,4 @@
-<h2 class="allPage-title">News</h2>
+<h2 class="allPage-title" id="news-title">News</h2>
 
 <div class="container">
     <app-tile [ngClass]="story.isFeatured ? 'container__featured' : 'container__tile'" [data]="story" *ngFor="let story of stories" data-aos="fade-up"></app-tile>
