--- a/src/app/pages/home/components/news/news.component.scss
+++ b/src/app/pages/home/components/news/news.component.scss
@@ -2,8 +2,18 @@
  display: flex;
   flex-wrap: wrap;
   justify-content: space-between;
-  padding: 2em;
   &__tile {
     flex: 0 0 30%;
+  }
+}
+
+
+#news-title {
+  margin-bottom: 0 !important;
+}
+
+@media only screen and (max-width: 500px){
+  .container {
+    flex-direction: column;
   }
 }
