--- a/src/app/pages/not-found-component/not-found-component.component.scss
+++ b/src/app/pages/not-found-component/not-found-component.component.scss
@@ -1,22 +1,18 @@
 .container {
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
+  height: 60vh;
   background-image: url("../../../assets/icons/cuculilogo.png");
   background-position: center;
   background-repeat: no-repeat;
-  &__contact {
-    display: flex;
-    &__details {
-      flex: 0 0 50%;
-      display: flex;
-      align-items: flex-start;
-      justify-content: center;
-      flex-direction: column;
-    }
-    &__form {
-      flex: 0 0 50%;
-      display: flex;
-    }
-  }
 }
+
+* {
+  text-align: center;
+}
+
 
 @media only screen and (max-width: 500px){
   h3 {
