--- a/src/app/pages/releases/releases.component.html
+++ b/src/app/pages/releases/releases.component.html
@@ -1,5 +1,5 @@
 <div class="container content-padded" data-aos="fade-in" data-aos-delay="250">
-  <h2 class="container__title">
+  <h2 class="allPage-title">
     Releases
   </h2>
   <div class="container__releases" data-aos="fade-down">
