- Working through routing bugs and small visual changes. - v 1.0 maybe not yet done

--- a/src/app/pages/artists/artist-tile/artist-tile.component.html
+++ b/src/app/pages/artists/artist-tile/artist-tile.component.html
@@ -3,6 +3,6 @@
     <div class="container__img-wrapper">
       <img src="{{artist.imgSrc}}">
     </div>
-    <h3>{{artist.name}}</h3>
+      <div class="container__name-wrapper"><h3>{{artist.name}}</h3></div>
     </a>
   </div>
