--- a/src/app/pages/artists/artists.component.scss
+++ b/src/app/pages/artists/artists.component.scss
@@ -1,6 +1,7 @@
 .container {
   text-decoration: none;
   color: inherit;
+  margin-bottom: 5em;
   &__artists {
     display: flex;
     flex-wrap: wrap;
