--- a/src/app/pages/releases/release-tile/release-tile.component.html
+++ b/src/app/pages/releases/release-tile/release-tile.component.html
@@ -3,7 +3,9 @@
     <div class="container__img-wrapper">
       <img src="{{release.imgSrc}}">
     </div>
-    <h3>{{release.title}}</h3>
-    <h4>{{release.artist}}</h4>
+    <div class="container__name-wrapper">
+      <h3>{{release.title}}</h3>
+      <h4>{{release.artist}}</h4>
+    </div>
   </a>
 </div>
