--- a/src/app/pages/home/components/news/tile/tile.component.html
+++ b/src/app/pages/home/components/news/tile/tile.component.html
@@ -1,4 +1,4 @@
-<a routerLink="{{data.route}}" class="container__tile">
+<a routerLink="news/{{data.route}}" class="container__tile">
   <h2 class="container__tile__featured" [ngClass]="inPage ? 'displayNone' : ''" *ngIf="data.isFeatured">Featured Story</h2>
   <div class="container__tile__img-wrapper">
     <img src="{{data.imgSrc}}" alt="{{data.imgDesc}}" [ngClass]="data.isFeatured === true ? 'featuredImg' : ''">
