--- a/src/app/pages/news/news-page/news-page/news-page.component.html
+++ b/src/app/pages/news/news-page/news-page/news-page.component.html
@@ -10,7 +10,7 @@
         <div class="related-stories" *ngIf="relatedStories.length">
           <h2>Related stories</h2>
           <div class="related-stories__stories">
-            <app-tile class="related-stories" [inPage]="true" *ngFor="let story of relatedStories" [data]="story"></app-tile>
+            <app-tile class="related-stories" [inPage]="true" *ngFor="let relatedStory of relatedStories" [data]="relatedStory" [ngClass]="story.id === relatedStory.id ? 'display-none' : ''"></app-tile>
           </div>
         </div>
       </div>
