--- a/src/app/pages/home/components/about-us/about-us.component.html
+++ b/src/app/pages/home/components/about-us/about-us.component.html
@@ -1,18 +1,15 @@
 <div class="container content-padded">
   <h2 class="container__heading">Who are we?</h2>
   <p class="container__desc">
-    Lorem ipsum dolor sit amet, consectetur adipiscing elit. Aenean aliquet convallis risus at ultrices. Morbi sed euismod nulla. Proin commodo,
-    risus vel efficitur vestibulum, justo arcu tincidunt quam, sit amet sodales elit urna id nisl. Duis sodales at nibh eget lobortis. Suspendisse
-    molestie quam et diam sodales, ac eleifend orci consectetur. Donec malesuada consectetur diam, non gravida mauris finibus sed. Mauris elit arcu,
-    rhoncus nec molestie nec, tincidunt a risus. Quisque tempor dui tellus, non tristique lacus consectetur ut.
-
-    Duis interdum quis neque eget suscipit. Orci varius natoque penatibus et magnis dis parturient montes, nascetur ridiculus mus. Morbi accumsan nunc
-    sit amet nibh convallis, ac suscipit justo varius. Suspendisse justo nibh, eleifend ut pretium sit amet, ultricies eget nisl. Etiam hendrerit dictum
-    augue, a tristique est suscipit quis. Fusce semper ligula odio, eu vestibulum nibh sollicitudin vitae. Cras quis commodo nulla, vitae pulvinar lectus.
-    Aliquam aliquet erat at nibh semper, vel semper eros tempor. Mauris in egestas nisi, eu porta ligula. Pellentesque a varius leo, maximus pellentesque lacus.
-
-    Ut vestibulum purus ac mollis rutrum. Vestibulum nec mauris quis lectus eleifend tempus non non velit. Orci varius natoque penatibus et magnis dis p
-    arturient montes, nascetur ridiculus mus. Suspendisse a diam eu eros volutpat rutrum. Proin tincidunt sit amet velit eu ullamcorper. Aenean ut neque
-    venenatis, tincidunt augue vitae, porttitor sapien. Duis dapibus semper nibh, et viverra erat bibendum non. Praesent sodales est vel placerat posuere.
-    Etiam vitae sem finibus, venenatis mauris sed, mattis diam. Vestibulum consequat sollicitudin massa, ut rhoncus sapien.</p>
+    Cuculi Records joins a growing number of DIY labels based in Bristol, UK. It’s a collective effort imagined by songwriters Bethany Roberts and Bec Garthwaite as a space to cultivate our own sound and release it independently.
+  </p>
+  <p class="container__desc">
+    After several years of writing, performing and recording with songwriters’ collective Hands of the Heron, it felt right to create a platform to share the effort and joy of releasing our music, alongside the solo projects and offshoot collaborations born from the band.
+</p>
+  <p class="container__desc">
+    Within our creative cocoon, these songwriters and poets have found pathways to develop their craft. Come and listen.
+ </p>
+  <div class="img-container">
+    <img src="assets/icons/cuculilogo.png">
+  </div>
 </div>
