--- a/src/app/pages/releases/release-page/release-page.component.html
+++ b/src/app/pages/releases/release-page/release-page.component.html
@@ -1,4 +1,4 @@
-<div class="container content-padded">
+<div class="container content-padded" data-aos="fade-in" data-aos-delay="150">
   <div class="container__upper">
     <div class="container__img-wrapper">
       <img src="{{release.imgSrc}}">
