--- a/src/app/pages/home/home.component.html
+++ b/src/app/pages/home/home.component.html
@@ -10,10 +10,10 @@
   <!--<app-insta-feed></app-insta-feed>-->
   <div class="container">
     <div class="container__info-news">
-      <div class="content-padded info-wrapper" data-aos="fade-up" data-aos-delay="200">
+      <div class="info-wrapper" data-aos="fade-up" data-aos-delay="200">
         <app-about-us></app-about-us>
       </div>
-      <div class="content-padded news-wrapper" data-aos="fade-up" data-aos-delay="200">
+      <div class="news-wrapper" data-aos="fade-up" data-aos-delay="200">
         <app-news [stories]="stories"></app-news>
       </div>
     </div>
