--- a/src/app/pages/releases/releases.component.html
+++ b/src/app/pages/releases/releases.component.html
@@ -3,6 +3,9 @@
     Releases
   </h2>
   <div class="container__releases" data-aos="fade-down">
-    <app-release-tile *ngFor="let release of releases" [release]="release" ></app-release-tile>
+    <app-release-tile *ngFor="let release of releases" [release]="release"></app-release-tile>
+    <div class="container__sorry" *ngIf="!releases.length">
+      <h2 class="allPage-subtitle">No releases yet... watch this space</h2>
+    </div>
   </div>
 </div>
