- Worked through notes in 01/10/20 doc

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,4 +1,4 @@
 <app-navbar></app-navbar>
-<div style="height: 15vh"></div>
+<div style="height: 10em"></div>
 <router-outlet data-aos="fade-in"></router-outlet>
 <app-footer *ngIf="!hamburgerActive"></app-footer>
