--- a/src/app/nav/navbar/navbar.component.html
+++ b/src/app/nav/navbar/navbar.component.html
@@ -1,7 +1,7 @@
 <div class="container content-padded" data-aos="fade-in" data-aos-delay="150">
   <div class="container__left" data-aos="fade-right" data-aos-delay="280">
     <div class="container__left__logo-wrapper">
-      <a routerLink="/">
+      <a class="container__left__logo-wrapper__link" routerLink="/">
         <img class="container__left__logo-wrapper__logo" src="assets/icons/cuculilogo.png">
       </a>
     </div>
