--- a/src/app/pages/contact/contact.component.html
+++ b/src/app/pages/contact/contact.component.html
@@ -2,8 +2,7 @@
   <h1 class="allPage-title">Contact</h1>
   <div class="container__contact">
     <div class="container__contact__details">
-      <h3 class="allPage-subtitle">Phone: +696969420</h3>
-      <h3 class="allPage-subtitle">Email: cuculirecords@gmail.com</h3>
+      <h3 class="allPage-subtitle">Email: info@cuculirecords.com</h3>
     </div>
 <!--    <div class="container__contact__form">-->
 <!--&lt;!&ndash;      <img src="assets/icons/cuculilogo.png">&ndash;&gt;-->
