--- a/src/styles.scss
+++ b/src/styles.scss
@@ -3,11 +3,12 @@
 /* You can add global styles to this file, and also import other style files */
 $mainFontColor: #000000;
 $secondaryFontColor: #d7eede;
-$tertiaryFontColor: #dabeea;
+//$tertiaryFontColor: #dabeea;
+$tertiaryFontColor: #8ce0e5;
 $offWhite: #f1f1f1;
 $hoverColor: red;
 
-$textBgMain: rgba(238, 221, 238, 0.67);
+$textBgMain: #d6d4ce;
 $textBgFaded: rgba(113, 113, 113, 0.6);
 
 $desktopPadding: 5vw;
