--- a/src/app/nav/navbar/navbar.component.scss
+++ b/src/app/nav/navbar/navbar.component.scss
@@ -8,7 +8,7 @@
 }
 
 .container {
-  height: 15vh;
+  height: 10em;
   display: flex;
   width: 100vw;
   &__left {
@@ -18,6 +18,11 @@
       flex: 0 0 30%;
       display: flex;
       justify-content: flex-start;
+      &__link {
+        display: flex;
+        justify-content: flex-start;
+        align-items: center;
+      }
       &__logo {
         height: 15vh;
       }
