--- a/src/app/pages/artists/artist-page/artist-page.component.html
+++ b/src/app/pages/artists/artist-page/artist-page.component.html
@@ -1,11 +1,14 @@
 <div class="container content-padded" data-aos="fade-in" data-aos-delay="250">
+  <div class="container__dk-title">
+    <h2 class="allPage-title dk-title">{{artist.name}}</h2>
+  </div>
   <div class="container__upper">
     <div class="container__img-wrapper">
       <img src="{{artist.imgSrc}}">
     </div>
     <div class="container__artist-info">
-      <h2 class="page-title allPage-title">{{artist.name}}</h2>
-      <p class="allPage-para">{{artist.bio}}</p>
+      <h2 class="page-title allPage-title artist-title-responsive">{{artist.name}}</h2>
+      <p class="allPage-para artist-desc">{{artist.bio}}</p>
       <div class="container__for-fans-of" *ngIf="artist.forFansOf">
         <p><span class="container__for-fans-of__tag">For fans of: </span>
           <span *ngFor="let item of artist.forFansOf">{{item}}<span *ngIf="artist.forFansOf.indexOf(item) !== artist.forFansOf.length - 1">, </span>
