--- a/src/app/pages/home/components/about-us/about-us.component.scss
+++ b/src/app/pages/home/components/about-us/about-us.component.scss
@@ -3,11 +3,17 @@
 .container {
   padding-top: 2em;
   padding-bottom: 2em;
+  //background-image: url("../../../../../assets/icons/logoalt.png");
+  //background-position: center;
+  //background-repeat: no-repeat;
+  //background-size: 30em auto;
   &__heading {
     font-size: 3em;
   }
   &__desc {
-    font-size: 1.5em;
+    font-size: 1.4em;
+    line-height: 1.8em;
+    margin-bottom: 2em;
   }
 }
 
