--- a/src/app/pages/home/components/news/tile/tile.component.scss
+++ b/src/app/pages/home/components/news/tile/tile.component.scss
@@ -14,7 +14,8 @@
     img {
       width: 100%;
       max-height: 15em;
-      object-fit: cover;
+      //object-fit: cover;
+      object-fit: contain;
     }
     .featuredImg {
       max-height: 20em;
