--- a/src/app/pages/news/news-page/news-page/news-page.component.html
+++ b/src/app/pages/news/news-page/news-page/news-page.component.html
@@ -6,7 +6,7 @@
       <div class="container__text">
         <h1 class="container__text__heading">{{story.heading}}</h1>
         <h2 class="quote-mb">"{{story.quote}}"</h2>
-        <p class="container__text__text">{{story.text}}</p>
+        <p class="container__text__text" [innerHTML]="story.text"></p>
         <div class="related-stories" *ngIf="relatedStories.length">
           <h2>Related stories</h2>
           <div class="related-stories__stories">
