--- a/src/app/pages/news/news-page/news-page/news-page.component.scss
+++ b/src/app/pages/news/news-page/news-page/news-page.component.scss
@@ -3,7 +3,8 @@
   img {
     width: 100%;
     max-height: 60vh;
-    object-fit: cover;
+    //object-fit: cover;
+    object-fit: contain;
   }
 }
 
@@ -13,8 +14,9 @@
 
 .container {
   display: flex;
+  padding-bottom: 5em;
   &__text {
-    flex: 0 0 60%;
+    flex: 1 0 60%;
     &__heading {
       font-size: 4em;
     }
@@ -23,7 +25,7 @@
     }
   }
   &__info {
-    flex: 0 0 40%;
+    //flex: 0 0 40%;
     padding-left: 1.5em;
     &__quote {
       font-size: 1.5em;
