--- a/src/app/pages/news/news/news-tile/news-tile.component.html
+++ b/src/app/pages/news/news/news-tile/news-tile.component.html
@@ -5,7 +5,7 @@
   </div>
   <div class="container__tile__text">
     <h4 class="container__tile__text__head allPage-subtitle">{{data.heading}}</h4>
-    <p class="container__tile__text__desc">{{data.text}}</p>
+    <p class="container__tile__text__desc" [innerHTML]="data.text"></p>
     <p class="container__tile__text__read-more">Read more >></p>
   </div>
 </a>
